Delete and update user dont work, it is fault of JADE files

--- a/views/login.jade
+++ b/views/login.jade
@@ -8,9 +8,9 @@ block content
         fieldset(data-role='controlgroup')
           label(for='email') email
             input(id='email',type='text',value='',placeholder='Email',name='email')
-      div(id='hiddendiv',data-role='fieldcontain')
+      div(data-role='fieldcontain')
         fieldset(data-role='controlgroup')
           label(for='password') password
-            input(id='password',type='text',value='',placeholder='',name='password')
+            input(id='password',type='password',value='',placeholder='',name='password')
       div(data-role='fieldcontain')
         input(type='submit',value='Log in',data-transition='fade', data-theme='c')
