Delete and update work fine in JADE files. HTML dont support PUT and DEL so you have to put hidden inputs

--- a/views/deleteuser.jade
+++ b/views/deleteuser.jade
@@ -4,6 +4,7 @@ block content
   h1= title
   div
     form(action='api/users/', method='delete')
+      input(type='hidden', name='_method', value='delete')
       div(id='hiddendiv',data-role='fieldcontain')
         fieldset(data-role='controlgroup')
           label(for='password') password
