--- a/views/signup.jade
+++ b/views/signup.jade
@@ -16,9 +16,17 @@ block content
         fieldset(data-role='controlgroup')
           label(for='email') email
             input(id='email',type='text',value='',placeholder='Email',name='email')
-      div(id='hiddendiv',data-role='fieldcontain')
+      div(data-role='fieldcontain')
         fieldset(data-role='controlgroup')
           label(for='password') password
             input(id='password',type='password',value='',placeholder='Password',name='password')
+      div(data-role='fieldcontain')
+        fieldset(data-role='controlgroup')
+          label(for='password2') password
+            input(id='password2',type='password',value='',placeholder='Password',name='password2')
+      div(data-role='fieldcontain')
+        fieldset(data-role='controlgroup')
+          label(for='username') username
+            input(id='username',type='text',value='',placeholder='Username',name='username')
       div(data-role='fieldcontain')
         input(type='submit',value='Sign up',data-transition='fade', data-theme='c')
