--- a/views/activateuser.jade
+++ b/views/activateuser.jade
@@ -1,11 +1,12 @@
 extends layout
 
 block content
-  h1= title
-  div
-    form(action='api/users', method='post', enctype='application/x-www-form-urlencoded')
-      input(type='hidden', name='_method', value='patch')
-      input(id='ac_code',type='hidden',value=!{ac_code},name='ac_code')
-      input(id='user_id',type='hidden',value=!{_id},name='user_id')
-      div(data-role='fieldcontain')
-        input(type='submit',value='Activate user',data-transition='fade', data-theme='c')
+    h1= title
+
+    div
+        form(action='api/users/authemail', method='post', enctype='application/x-www-form-urlencoded')
+            input(type='hidden', name='_method', value='patch')
+            input(id='ac_code',type='hidden',value="#{ac_code}",name='ac_code')
+            input(id='_id',type='hidden',value="#{_id}",name='_id')
+            div(data-role='fieldcontain')
+                input(type='submit',value='Activate user',data-transition='fade', data-theme='c')
