--- a/views/signup.jade
+++ b/views/signup.jade
@@ -17,4 +17,8 @@ block content
           label(for='email') email
             input(id='email',type='text',value='',placeholder='Email',name='email')
       div(data-role='fieldcontain')
+        fieldset(data-role='controlgroup')
+          label(for='password') password
+            input(id='password',type='password',value='',placeholder='Password',name='password')
+      div(data-role='fieldcontain')
         input(type='submit',value='Sign up',data-transition='fade', data-theme='c')
