--- a/views/confirmnewemail.jade
+++ b/views/confirmnewemail.jade
@@ -6,7 +6,7 @@ block content
     div
         form(action='api/users/authnewemail', method='post', enctype='application/x-www-form-urlencoded')
             input(type='hidden', name='_method', value='patch')
-            input(id='code',type='hidden',value="#{code}",name='ac_code')
+            input(id='code',type='hidden',value="#{code}",name='code')
             input(id='_id',type='hidden',value="#{_id}",name='_id')
             div(data-role='fieldcontain')
                 input(type='submit',value='Activate user',data-transition='fade', data-theme='c')
